fix an issue where text unexpetedly wraps on some mobile devices

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ section:not(.hero-section) {
 
     h1 {
         width: fit-content;
+        white-space: nowrap;
         margin-inline: auto;
         margin-bottom: 44px;
         color: #fff;
@@ -578,6 +579,7 @@ section.contact-section {
             margin-top: 12px;
             margin-left: auto;
             transition: 0.2s ease-in;
+            white-space: nowrap;
 
             &:hover {
                 background-color: #1a73e8af;
